Add new benchmark script.