@@ -1,7 +1,7 @@
 [![License](https://img.shields.io/github/license/vy/fiber-test.svg)](http://www.apache.org/licenses/LICENSE-2.0.txt)
 
-This project bundles a set of benchmarks that aims to measure the performance
-of a multitude of threading implementations in the Java Virtual Machine.
+A bundle of benchmarks measuring the performance of various fiber (lightweight
+thread, actor, coroutine, etc.) implementations for the JVM.
 
 # Benchmarks
 
@@ -11,10 +11,7 @@ of a multitude of threading implementations in the Java Virtual Machine.
   Erlang](http://web.archive.org/web/20150906052630/https://www.sics.se/%7ejoe/ericsson/du98024.html)
   article.)
 
-Implementations
----------------
-
-Project employs 3 threading libraries to implement fibers in the benchmarks.
+# Implementations
 
 1. [Standard Java Threads](https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/lang/Thread.html)
 2. [Akka Actors](https://akka.io/)
@@ -22,48 +19,21 @@ Project employs 3 threading libraries to implement fibers in the benchmarks.
 4. [Kilim Actors, Continuations, and Fibers](https://github.com/kilim/kilim)
 5. [Project Loom Continuations and Fibers](https://openjdk.java.net/projects/loom/)
 
-Usage
------
+# Usage
 
-You first need to build the JMH Uber JAR using Maven.
+You first need to build the necessary [JMH](https://openjdk.java.net/projects/code-tools/jmh/)
+fat JARs and then let the benchmark script do its job:
 
-    $ JAVA_11_HOME=/path/to/java-11/home mvn package
+    $ ./mvnw package
+    $ ./benchmark/benchmark.py
 
-Next, you can either use the provided `benchmark.sh` script
+If you don't have a local JDK 11 installation, you can also use the shipped
+`docker.sh` to compile and run the benchmark in a Docker container:
 
-    $ ./benchmark.sh --help
-    Available parameters (with defaults):
-        workerCount (503)
-        ringSize    (1000000)
-        cpuList     (0-1)
+    $ ./docker.sh mvn-package
+    $ ./docker.sh benchmark
 
-    # You can run with default parameters.
-    $ ./benchmarks.sh
-
-    # Alternatively, you can configure parameters through environment variables.
-    $ ringSize=500 workerCount=30 cpuList=0-7 ./benchmark.sh
-
-or call JMH manually:
-
-    $ java \
-    > -jar target/fiber-test.jar \
-    > -jvmArgsAppend "-DworkerCount=503 -DringSize=1000000 -javaagent:/path/to/quasar-core-<version>.jar" \
-    > -wi 5 -i 10 -bm avgt -tu ms -f 5 \
-    > ".*RingBenchmark.*"
-
-Instead of using JMH, you can additionally use `assembly:single` goal to
-create an all-in-one JAR and run benchmarks individually.
-
-    $ mvn assembly:single
-    $ java \
-    > -server -XX:+TieredCompilation -XX:+AggressiveOpts \
-    > -DworkerCount=503 -DringSize=10000000 \
-    > -javaagent:/path/to/quasar-core-<version>.jar \
-    > -cp target/fiber-test-<version>-jar-with-dependencies.jar \
-    > com.vlkan.fibertest.ring.QuasarFiberRingBenchmark
-
-Results
--------
+# Results
 
 For `Oracle Java 1.8.0_121-b13` running on `Intel(R) Core(TM) i3-2105 CPU @ 3.10GHz` on `Linux 4.4.0-137-generic x86_64` kernel:
 
@@ -80,14 +50,12 @@ QuasarDataflowRingBenchmark.ringBenchmark     avgt    4  1866.151 ±  302.077  m
 QuasarFiberRingBenchmark.ringBenchmark        avgt    4   666.120 ±  148.967  ms/op
 ```
 
-Contributors
-------------
+# Contributors
 
 - [Arek Burdach](https://github.com/arkadius)
 - [Seth Lytle](https://github.com/nqzero)
 
-License
--------
+# License
 
 Copyright &copy; 2014-2018 [Volkan Yazıcı](http://vlkan.com/)
 
